--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <img src="./assets/logo.svg" alt="ChatGPT-Styles logo">
+    <img id="logo" src="./assets/logo.svg" alt="ChatGPT-Styles logo">
   </header>
   <main>
     <span class="main-title">Themes:</span>
@@ -24,28 +24,61 @@ Description: A style dracula make to chatgpt styles extension
 Author of Theme: ....
 Last updated: 21/05/2012">
      </div> 
-     <img src="https://source.unsplash.com/featured/" alt="Theme image" class="theme-img">
+     <img src="https://i.ibb.co/qpGDXF8/image.png" alt="Theme image" class="theme-img" loading="lazy">
      <button class="theme-button">
       <span class="theme-button-title">Apply this theme!</span>
     </button> 
     </li>
 
     <li class="theme-box">
+      <div class="theme-box-header">
       <span class="theme-title">Dracula</span>
-      <img src="https://source.unsplash.com/featured/" alt="Theme image" class="theme-img">
+      <img data-html="true" class="theme-title-icon" src="./assets/info-icon.svg" alt="Icon tooltip" title="Title: Dracula
+ Description: A style dracula make to chatgpt styles extension
+ Author of Theme: ....
+ Last updated: 21/05/2012">
+      </div> 
+      <img src="https://i.ibb.co/qpGDXF8/image.png" alt="Theme image" class="theme-img" loading="lazy">
       <button class="theme-button">
        <span class="theme-button-title">Apply this theme!</span>
      </button> 
      </li>
+
+     <li class="theme-box">
+      <div class="theme-box-header">
+      <span class="theme-title">Dracula</span>
+      <img data-html="true" class="theme-title-icon" src="./assets/info-icon.svg" alt="Icon tooltip" title="Title: Dracula
+ Description: A style dracula make to chatgpt styles extension
+ Author of Theme: ....
+ Last updated: 21/05/2012">
+      </div> 
+      <img src="https://i.ibb.co/qpGDXF8/image.png" title="Click to view!" alt="Theme image" class="theme-img" loading="lazy">
+      <button class="theme-button">
+       <span class="theme-button-title">Apply this theme!</span>
+     </button> 
+     </li>
+
+     <li class="theme-box">
+      <div class="theme-box-header">
+      <span class="theme-title">Dracula</span>
+      <img data-html="true" class="theme-title-icon" src="./assets/info-icon.svg" alt="Icon tooltip" title="Title: Dracula
+ Description: A style dracula make to chatgpt styles extension
+ Author of Theme: ....
+ Last updated: 21/05/2012">
+      </div> 
+      <img src="https://i.ibb.co/qpGDXF8/image.png" alt="Theme image" class="theme-img" loading="lazy">
+      <button class="theme-button">
+       <span class="theme-button-title">Apply this theme!</span>
+     </button> 
+    </li>
     </ul>
   </main>
   <footer>
     <a href="https://github.com/mateusneresrb/chatgpt-style">
-      <img src="./assets/logo-github.svg" alt="Github logo">
+      <img id="github-icon" src="./assets/logo-github.svg" alt="Github logo">
     </a>
   </footer>
 
   <script type="module" src="./script.js"></script>
-  <script type="module" src="./themes.js"></script>
 </body>
 </html>
