--- a/src/index.html
+++ b/src/index.html
@@ -16,61 +16,7 @@
   <main>
     <span class="main-title">Themes:</span>
     <ul id="themes"> 
-     <li class="theme-box">
-     <div class="theme-box-header">
-     <span class="theme-title">Dracula</span>
-     <img data-html="true" class="theme-title-icon" src="./assets/info-icon.svg" alt="Icon tooltip" title="Title: Dracula
-Description: A style dracula make to chatgpt styles extension
-Author of Theme: ....
-Last updated: 21/05/2012">
-     </div> 
-     <img src="https://i.ibb.co/qpGDXF8/image.png" alt="Theme image" class="theme-img" loading="lazy">
-     <button class="theme-button">
-      <span class="theme-button-title">Apply this theme!</span>
-    </button> 
-    </li>
 
-    <li class="theme-box">
-      <div class="theme-box-header">
-      <span class="theme-title">Dracula</span>
-      <img data-html="true" class="theme-title-icon" src="./assets/info-icon.svg" alt="Icon tooltip" title="Title: Dracula
- Description: A style dracula make to chatgpt styles extension
- Author of Theme: ....
- Last updated: 21/05/2012">
-      </div> 
-      <img src="https://i.ibb.co/qpGDXF8/image.png" alt="Theme image" class="theme-img" loading="lazy">
-      <button class="theme-button">
-       <span class="theme-button-title">Apply this theme!</span>
-     </button> 
-     </li>
-
-     <li class="theme-box">
-      <div class="theme-box-header">
-      <span class="theme-title">Dracula</span>
-      <img data-html="true" class="theme-title-icon" src="./assets/info-icon.svg" alt="Icon tooltip" title="Title: Dracula
- Description: A style dracula make to chatgpt styles extension
- Author of Theme: ....
- Last updated: 21/05/2012">
-      </div> 
-      <img src="https://i.ibb.co/qpGDXF8/image.png" title="Click to view!" alt="Theme image" class="theme-img" loading="lazy">
-      <button class="theme-button">
-       <span class="theme-button-title">Apply this theme!</span>
-     </button> 
-     </li>
-
-     <li class="theme-box">
-      <div class="theme-box-header">
-      <span class="theme-title">Dracula</span>
-      <img data-html="true" class="theme-title-icon" src="./assets/info-icon.svg" alt="Icon tooltip" title="Title: Dracula
- Description: A style dracula make to chatgpt styles extension
- Author of Theme: ....
- Last updated: 21/05/2012">
-      </div> 
-      <img src="https://i.ibb.co/qpGDXF8/image.png" alt="Theme image" class="theme-img" loading="lazy">
-      <button class="theme-button">
-       <span class="theme-button-title">Apply this theme!</span>
-     </button> 
-    </li>
     </ul>
   </main>
   <footer>
@@ -80,5 +26,7 @@ Last updated: 21/05/2012">
   </footer>
 
   <script type="module" src="./script.js"></script>
+  <script type="module" src="./themes.js"></script>
+
 </body>
 </html>
