--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ChatGPT-Styles</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-
 <body>
   <header>
     <img id="logo" src="./assets/logo.svg" alt="ChatGPT-Styles logo">
@@ -25,8 +16,7 @@
     </a>
   </footer>
 
-  <script type="module" src="./script.js"></script>
-  <script type="module" src="./themes.js"></script>
-
+  <link rel="stylesheet" href="styles.css">
+  <script src="./script.js"></script>
 </body>
 </html>
