feat: change page title and increase msg time

--- a/src/popup.html
+++ b/src/popup.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-  <img id="popup-img">
+  <img id="popup-img" loading="lazy">
   <script src="popup.js"></script>
 </body>
 </html>
