fix: open github link in new tab

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     </ul>
   </main>
   <footer>
-    <a href="https://github.com/mateusneresrb/chatgpt-style">
+    <a href="https://github.com/mateusneresrb/chatgpt-style" target="_blank">
       <img id="github-icon" src="./assets/logo-github.svg" alt="Github logo">
     </a>
   </footer>
